[gd_scene load_steps=7 format=3 uid="uid://kfixfol5jf7d"]

[ext_resource type="Script" uid="uid://cdbs4bnti0oe3" path="res://ui/scenes/debug/debug_panel.gd" id="1_main"]
[ext_resource type="Script" uid="uid://dki70kywdmjm3" path="res://ui/scenes/debug/tabs/state_tab.gd" id="2_state"]
[ext_resource type="Script" uid="uid://ci1lnbq867ojm" path="res://ui/scenes/debug/tabs/command_tab.gd" id="3_command"]
[ext_resource type="Script" uid="uid://dbpq2ayqvk8ct" path="res://ui/scenes/debug/tabs/entity_tab.gd" id="4_entity"]
[ext_resource type="Script" uid="uid://brq48u5grkyp1" path="res://ui/scenes/debug/tabs/history_tab.gd" id="5_history"]
[ext_resource type="Script" uid="uid://c3y83ei26pmf2" path="res://ui/scenes/debug/tabs/settings_tab.gd" id="6_settings"]

[node name="DebugPanel" type="Window"]
oversampling_override = 1.0
title = "调试面板"
initial_position = 2
size = Vector2i(900, 600)
min_size = Vector2i(600, 400)
script = ExtResource("1_main")

[node name="MainContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0

[node name="TabContainer" type="TabContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3
current_tab = 0

[node name="OutputTab" type="MarginContainer" parent="MainContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="OutputText" type="RichTextLabel" parent="MainContainer/TabContainer/OutputTab"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="StateTab" type="MarginContainer" parent="MainContainer/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("2_state")
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/TabContainer/StateTab"]
layout_mode = 2
size_flags_vertical = 3

[node name="StateContent" type="VBoxContainer" parent="MainContainer/TabContainer/StateTab/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CommandTab" type="MarginContainer" parent="MainContainer/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("3_command")
metadata/_tab_index = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/TabContainer/CommandTab"]
layout_mode = 2
size_flags_vertical = 3

[node name="CommandContent" type="VBoxContainer" parent="MainContainer/TabContainer/CommandTab/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EntityTab" type="MarginContainer" parent="MainContainer/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("4_entity")
metadata/_tab_index = 3

[node name="HSplitContainer" type="HSplitContainer" parent="MainContainer/TabContainer/EntityTab"]
layout_mode = 2
size_flags_vertical = 3

[node name="EntityTree" type="Tree" parent="MainContainer/TabContainer/EntityTab/HSplitContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
hide_root = true

[node name="EntityDetails" type="VBoxContainer" parent="MainContainer/TabContainer/EntityTab/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0

[node name="DetailsLabel" type="Label" parent="MainContainer/TabContainer/EntityTab/HSplitContainer/EntityDetails"]
layout_mode = 2
text = "选择一个实体查看详情"

[node name="DetailsText" type="RichTextLabel" parent="MainContainer/TabContainer/EntityTab/HSplitContainer/EntityDetails"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
selection_enabled = true

[node name="HistoryTab" type="MarginContainer" parent="MainContainer/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("5_history")
metadata/_tab_index = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MainContainer/TabContainer/HistoryTab"]
layout_mode = 2
size_flags_vertical = 3

[node name="FilterBar" type="HBoxContainer" parent="MainContainer/TabContainer/HistoryTab/VBoxContainer"]
layout_mode = 2

[node name="SystemCheck" type="CheckBox" parent="MainContainer/TabContainer/HistoryTab/VBoxContainer/FilterBar"]
layout_mode = 2
button_pressed = true
text = "系统命令"

[node name="PlayerCheck" type="CheckBox" parent="MainContainer/TabContainer/HistoryTab/VBoxContainer/FilterBar"]
layout_mode = 2
button_pressed = true
text = "玩家命令"

[node name="RefreshButton" type="Button" parent="MainContainer/TabContainer/HistoryTab/VBoxContainer/FilterBar"]
layout_mode = 2
text = "刷新"

[node name="ExportButton" type="Button" parent="MainContainer/TabContainer/HistoryTab/VBoxContainer/FilterBar"]
layout_mode = 2
text = "导出"

[node name="HistoryList" type="RichTextLabel" parent="MainContainer/TabContainer/HistoryTab/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
focus_mode = 2
bbcode_enabled = true
scroll_following = true
selection_enabled = true

[node name="SettingsTab" type="MarginContainer" parent="MainContainer/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("6_settings")
metadata/_tab_index = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/TabContainer/SettingsTab"]
layout_mode = 2
size_flags_vertical = 3

[node name="SettingsContent" type="VBoxContainer" parent="MainContainer/TabContainer/SettingsTab/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BottomBar" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="CommandLabel" type="Label" parent="MainContainer/BottomBar"]
layout_mode = 2
text = ">"

[node name="CommandInput" type="LineEdit" parent="MainContainer/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "输入命令..."
caret_blink = true

[node name="ExecuteButton" type="Button" parent="MainContainer/BottomBar"]
layout_mode = 2
text = "执行"

[node name="StatusBar" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MainContainer/StatusBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "调试模式: 开启 | 命令数: 0 | Hash: --------"
horizontal_alignment = 1
